<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_first_package</name>
  <version>0.1.0</version>
  <description>Projekt zaliczeniowy przedmiot NIOSR</description>
  <maintainer email="maciej.p.krupka@student.put.poznan.pl">parallels</maintainer>
  <license>MIT</license>

  <depend>cv_bridge</depend>
  <depend>serial</depend>
  <depend>math</depend>
  <depend>python3-opencv</depend>
  <depend>std_msgs.msg</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>my_quaternion</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
